--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,18 @@
     position: relative;
 }
 
-.product_image img {
+.product_image {
 	width: 100%;
     height: 300px;
     position: relative;
+}
+
+.product_image img {
+	max-width: 100%;
+    max-height: 300px;
+    position: relative;
+    display: block;
+    margin: auto;
 }
 
 .product_title h2 {
