--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,11 @@
 	text-align: center;
 	width: 100%;
 }
+
+.product_price {
+	position: absolute;
+	text-align: center;
+	width: 100%;
+	color: #f00;
+	font-size: 13px;
+}
