--- a/css/style-item.css
+++ b/css/style-item.css
@@ -1,11 +1,20 @@
-.item-title {
-    text-align: center;	
+.item-image {
+	float: left;
 }
 
-.item-image {
+.item-detail {
+	padding: 20px;
+	float: left;
+}
+
+.item-image img {
 	max-width: 100%;
     height: 500px;
     position: relative;
     display: block;
     margin: auto;
+}
+
+.item-detail p {
+	text-align: left;
 }
