--- a/css/style-main-galery.css
+++ b/css/style-main-galery.css
@@ -12,7 +12,14 @@ h1 {
     clear: both;
 }
 
+#main-menu {
+	margin: auto;
+    width: 50%;
+    padding: 10px;
+}
+
 #main-menu a {
+	padding: 34px;
 	font-size: 20px;
 	color: #737373;
 	text-decoration: none;
