--- a/css/style-galery.css
+++ b/css/style-galery.css
@@ -1,13 +1,12 @@
 .item {
-	border: 1px solid #dddddd;
-	border-top-width: 5px;
 	float: left;
 	width: 33.33%;
 	padding: 15px;
+	background-color: #ffffff;
 }
 
 .item img {
-	max-height: 230;
+	max-height: 230px;
 	max-width: 100%;
 	display: block;
     margin-left: auto;
