--- a/css/style-main-galery.css
+++ b/css/style-main-galery.css
@@ -2,6 +2,14 @@
 	box-sizing: border-box;
 }
 
+body {
+	background-color: #E5E5E5;
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	overflow-y: scroll;
+}
+
 h1 {
 	margin: 30px 0 10px 0;
 	color: #404040;
@@ -13,13 +21,29 @@ h1 {
 }
 
 #main-menu {
-	margin: auto;
-    width: 50%;
-    padding: 10px;
+	background: #ffffff;
+	text-align: center;
+    padding: 15px 0;
+    border-bottom: 1px solid #dddddd;
+    position: relative;
+}
+
+#main-menu > a:first-child {
+	padding: 4px;
+	background-color: #ffffff;
+	border-radius: 50%;
+	position: absolute;
+    top: -135px;
+    left: 40px;
+}
+
+#main-menu > a:first-child > img {
+	max-width: 160px;
+	border-radius: 50%;
 }
 
 #main-menu a {
-	padding: 34px;
+	padding: 15px;
 	font-size: 20px;
 	color: #737373;
 	text-decoration: none;
@@ -40,4 +64,22 @@ h1 {
 .wrap {
 	max-width: 1000px;
 	margin: auto;
+}
+
+#footer {
+	clear: both;
+	padding: 30px 0;
+	text-align: center;
+}
+
+#footer p {
+	margin: 0;
+	padding: 30px 0 15px 0;
+	border-top: 1px solid #c5c5c5;
+}
+
+#back-to-top {
+	position: fixed;
+	right: 30px;
+	bottom: 30px;
 }
