--- a/cities/css/cities.css
+++ b/cities/css/cities.css
@@ -25,8 +25,36 @@ body {
 }
 /*End setup default*/
 
+@keyframes fadeinout {
+	50% {
+		color: red;
+		opacity: 1;
+		transform: translate(50%, 0);
+	}
+
+	0%, 100% {
+		opacity: 0;
+	}
+
+	0% {
+		transform: translate(0, 0);
+	}
+
+	100% {
+		transform: translate(100%, 0);
+	}
+
+}
+
 h1 {
+	text-align: left;
     color: green;
+    animation: fadeinout 10s ease infinite;
+}
+
+p#author {
+	text-align: left;
+	animation: fadeinout 10s ease infinite;
 }
 
 .wrap {
@@ -87,28 +115,4 @@ h1 {
 	transform: scale(1) translateY(-50%);
 }
 
-@keyframes author {
-	50% {
-		color: red;
-		opacity: 1;
-		transform: translate(50%, 0);
-	}
 
-	0%, 100% {
-		opacity: 0;
-	}
-
-	0% {
-		transform: translate(0, 0);
-	}
-
-	100% {
-		transform: translate(100%, 0);
-	}
-
-}
-
-p#author {
-	text-align: left;
-	animation: author 10s ease infinite;
-}
