--- a/game-card/css/style.css
+++ b/game-card/css/style.css
@@ -6,6 +6,7 @@ body {
 	margin: 0;
 	padding: 0;
 	overflow-y: scroll;
+	background-color: white;
 }
 
 h1 {
@@ -35,6 +36,13 @@ h1 {
 
 .card {
 	position: relative;
+	width: 151px;
+	height: 238px;
+}
+
+.card img {
+	width: 100%;
+	height: 100%;
 }
 
 .card .back {
@@ -55,4 +63,12 @@ h1 {
 .card .front, .card .back {
 	transition: all 0.5s;
 	backface-visibility: hidden;
+}
+
+.card.flipped .front {
+    transform: rotateY(180deg);
+}
+
+.card.flipped .back {
+    transform: rotateY(0deg);
 }
