--- a/game-card/css/style.css
+++ b/game-card/css/style.css
@@ -52,12 +52,8 @@ h1 {
 	left: 0;
 }
 
-.card:hover .back {
-	transform: rotateY(0deg);
-}
-
-.card:hover .front {
-	transform: rotateY(180deg);
+.card img:hover, .flipped img {
+	box-shadow: 0px 0px 15px 5px rgba(128, 128, 128, .75);
 }
 
 .card .front, .card .back {
