--- a/game-card/css/style.css
+++ b/game-card/css/style.css
@@ -20,13 +20,30 @@ h1 {
 	margin: auto;
 	padding: 15px;
 	max-width: 1265px;
-	max-height: 616px;
 	height: 100%;
 }
 
 .content {
 	position: relative;
 	overflow: auto;
+}
+
+.timer {
+    position: relative;
+    padding: 20px;
+    margin: 20px auto;
+    max-width: 1265px;
+    overflow: auto;
+    z-index: 9;
+}
+
+.timer .progressbar {
+    float: left;
+    width: 100%;
+}
+
+.timer .progressbar progress {
+    width: 100%;
 }
 
 .grid {
@@ -67,4 +84,84 @@ h1 {
 
 .card.flipped .back {
     transform: rotateY(0deg);
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    display: none;
+}
+
+.modal .dialog {
+    margin: 10% auto;
+    padding: 10px;
+    width: 500px;
+    text-align: center;
+    background-color: #ffffff;
+    border: 1px solid #999;
+    box-shadow: 0 5px 15px rgba(0,0,0,.5);
+    overflow: auto;
+}
+
+.modal.lose .dialog {
+    width: 600px;
+}
+
+.modal.lose .dialog h1 {
+    margin-top: 65px;
+}
+
+@keyframes winner {
+	0%  {color: #F9E559;}
+    25%  {color: #6EB869;}
+    50%  {color: #F8DEBD;}
+    75%  {color: #6EB869;}
+    100% {color: #F9E559;}
+}
+
+.modal.win .dialog h1 {
+	margin-top: 65px;
+    animation: winner 5s ease infinite;
+}
+
+.btn {
+    cursor: pointer;
+    text-transform: uppercase;
+    color: #ffffff;
+    min-height: 50px;
+    border-radius: 2px;
+    min-width: 150px;
+    margin-right: 10px;
+    vertical-align: middle;
+    transition: all .3s ease-out;
+    border: none;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.19),0 2px 2px 0 rgba(0,0,0,0.13);
+}
+
+.btn-reset {
+    margin-top: 40px;
+    background-color: #f57c00;
+    -moz-transition: opacity 3s;
+    transition: opacity 3s;
+    opacity: 0;
+}
+
+.btn-reset:hover {
+    background-color: #fb8c00;
+}
+
+.btn-start {
+    margin-bottom: 30px;
+}
+
+.btn-start {
+    background-color: #1e88e5;
+}
+
+.btn-start:hover {
+    background-color: #1976d2;
 }
