--- a/restaurant/css/style.css
+++ b/restaurant/css/style.css
@@ -1,3 +1,5 @@
+@import 'https://fonts.googleapis.com/css?family=Roboto';
+
 * {
 	box-sizing: border-box;
 }
@@ -5,6 +7,7 @@
 html,body {
 	margin:0;
 	padding:0;
+	font-family: 'Roboto', sans-serif;
 }
 
 li {
