--- a/form/css/style.css
+++ b/form/css/style.css
@@ -49,6 +49,7 @@ input.btn.login {
     width: 213px;
     padding: 5px;
     margin: 2px;
+    margin-top: 20px;
     appearance: none;
     background-color: white;
     border: 1px solid #cdcdcd;
