--- a/form/css/style.css
+++ b/form/css/style.css
@@ -19,7 +19,7 @@ div {
     width: 200px;
 }
 
-#name, #email, #password, #address, #phone {
+#name, #email, #password, #address, #phone, #facebook {
 	width: 100%;
 	padding: 5px;
 	margin: 2px;
@@ -58,4 +58,8 @@ input.btn.login {
 #gender {
 	float: left;
 	margin: 2px;
+}
+
+.error {
+    color: red;
 }
