--- a/minimo/css/style.css
+++ b/minimo/css/style.css
@@ -1,80 +1,9 @@
-@font-face {
-    font-family: 'playfair_display_regular';
-    src: url('../font/playfairdisplay-regular-webfont.eot');
-    src: url('../font/playfairdisplay-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../font/playfairdisplay-regular-webfont.svg#playfair_displayregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'inconsolata_regular';
-    src: url('../font/inconsolata-regular-webfont.eot');
-    src: url('../font/inconsolata-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../font/inconsolata-regular-webfont.svg#inconsolataregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-body {
-	font-family: 'playfair_display_regular';
-	font-size: 14px;
-	color: #626262;
-}
-
-.navbar {
-	text-transform: uppercase;
-}
-
-.navbar-brand {
-	font-family: 'inconsolata_regular';
-	text-transform: uppercase;
-	font-size: 30px;
-	color: #000000;
-}
-
-.navbar-default {
-	background-color: #ffffff;
-	border-color: #ffffff;
-}
-
-.nav>li>a {
-	padding: 10px 0px;
-	margin-left: 100px;
-	margin-right: 0;
-}
-
-@media (min-width: 1200px) {
-	.container {
-    	width: 1062px;
-    }
-}
-
-nav.navbar.navbar-default .container-fluid {
-	padding-right: 0;
-    padding-left: 0;
-}
-
-img {
-	width: 100%;
-}
-
-section.container {
-	padding: 0 80px;
-}
-
 .description {
 	margin-top: 100px;
 }
 
-.content-type, .comment {
+.comment {
 	text-transform: uppercase;
-}
-
-h2 {
-	font-size: 30px;
 }
 
 .description p, .item p {
@@ -127,21 +56,7 @@ section#load-more {
 }
 
 section#load-more button { 
-	border: 1px solid #f0f0f0;
+	border: 1px solid #626262;
 	background-color: #ffffff;
 	padding: 10px 30px;
-}
-
-footer.container {
-	padding: 0 80px;
-}
-
-footer a {
-	text-decoration: none;
-	font-size: 14px;
-	color: #626262; 
-}
-
-footer #footer-right {
-	float: right;
 }
